tests/errors/multi_error_7.c
char ch = 'A';
int val = 10;

for (i = 0; i < val; i = i + 1) // Undeclared i
{
    val = val + ch;
    new_val = val / 2; // Undeclared
}

if () // Empty if condition
{
    val = 0;
}
